# BackEnd/routes/posts.js
@@ -1,5 +1,5 @@
 import express from "express";
-import { commentPost, getFeedPosts, getUserPosts, likePost } from "../controllers/posts.js";
+import { commentPost, getFeedPosts, getUserPosts, likePost, deletePost } from "../controllers/posts.js";
 import { verifyToken } from "../middleware/auth.js";
 
 
@@ -12,6 +12,8 @@ router.get("/:userId/posts", verifyToken, getUserPosts);
 /* UPDATE */
 router.patch("/:id/like", verifyToken, likePost);
 router.patch("/:id/comment", verifyToken, commentPost);
+
+router.delete("/:id", deletePost); // add deletePost route
 
 
 
